seguranca: adiciona protecoes avancadas de conta v2.3.0
